bad code for good comics
more algorithmic comic making, will now check through frames to find the best candidate for the amount of quotes
now uses arraylists rather than arrays for quote and nick storage
attempts to increase text box size when text is too long